Realign modal content box to center & style fixes

--- a/style.css
+++ b/style.css
@@ -23,16 +23,50 @@ header {
 }
 
 button {
-    font-size: 1.2rem;
-    padding: 0.45rem;
+    padding: 0.5rem;
     border-radius: 20px;
     border: none;
+    line-height: 1.25rem;
 }
 
 button:hover {
     background-color: #bebebe;
 }
 
-.book-container {
+dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.all-books-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 3rem;
     
+}
+
+.book-card {
+    box-shadow: #0000003d 0px 3px 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.book-card-btn-container {
+    display: flex;
+}
+
+.book-card-remove {
+    display: inline-flex;
+    align-items: center;
+    width: fit-content;
+}
+
+.book-card-remove svg {
+    height: 1.25rem;
+    width: 1.25rem;
+    margin: 0;
 }
